# icmc-gui

./: .gitignore  Cargo.toml  README.md
res/: example.asm
res/shaders/: fragment.glsl  vertex.glsl
src/: app.rs  lib.rs  main.rs
src/elements/: editor.rs  mod.rs  screen.rs  state.rs
src/resources/: charmap.rs  mod.rs
