[package]
name = "icmc-gui"
version = "0.1.0"
edition = "2021"
rust-version = "1.81"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[dependencies]
egui = "0.30"
eframe = { version = "0.30", default-features = false, features = [
	# "accesskit", # accessibility (adds a lot of dependencies).
	"default_fonts", # default egui fonts.
	"glow", # rendering backend (alternative: wgpu)
	"persistence", # enable app state persistent to restarting
	"x11", # enable X11
]}
log = "0.4"

# for persistence
serde = { version = "1", features = ["derive"] }

# native
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"

# web
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
web-sys = "0.3.70" # for accessing DOM

[profile.release]
opt-level = 2 # fast and minimal wasm
